# claude-coder

./: .env.example  .env.local  .gitignore  .patch  .vscodeignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  biome.json  bun.lockb  codemcp.toml  eval-runner.py  extension-state-summary.md  js.md  js1.md  memory-system-improvements.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt-crafting-guide.md  script.py  validation_report_20241114_053524.json  validation_report_20241115_015810.json  validation_report_20241115_015829.json  validation_report_20241115_024055.json  validation_report_20241115_025106.json  validation_report_20241115_030623.json  validation_report_20241115_031339.json  validation_report_20241115_042742.json  validation_report_20241115_043844.json  validation_report_20241115_044400.json  validation_report_20241115_044845.json  validation_report_20241115_045247.json  validation_report_20241115_050249.json  validation_report_20241115_050924.json  validation_report_20241115_051200.json  validation_report_20241115_051420.json
bundler/: mac.sh
core/: .env.example  .prettierrc.json  cli.js  package-lock.json  package.json  tsconfig.json
eval/: mypy.ini  pyproject.toml
eval/extension/agent/: tools.py
eval/extension/prompts/: system_prompt.py
eval/extension/providers/: api_provider.py
eval/extension/tools/: ask_consultant_tool.py  attempt_completion_tool.py  base_tool.py  execute_command_tool.py  list_files_tool.py  read_file_tool.py  write_file_tool.py
extension/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  (+20 more)
(+1238 files in other folders)
